# services/user_service/docs/swagger.yaml
@@ -144,12 +144,16 @@ definitions:
     properties:
       archived_at:
         type: string
+      config:
+        $ref: '#/definitions/presenters.ConfigResponse'
       config_id:
         type: integer
       room_id:
         type: integer
       server_id:
         type: integer
+      server_name:
+        type: string
       status:
         type: string
     type: object
@@ -928,7 +932,9 @@ paths:
     get:
       consumes:
       - application/json
-      description: Returns non-archived rooms.
+      description: 'Returns non-archived rooms. Filter fields: room_id, config_id,
+        server_id, server_name, status, config_capacity, config_registration_price,
+        config_is_boost, config_game_id, config_game_name.'
       parameters:
       - description: Authorization Token
         in: header
